<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="110dp"
    tools:ignore="TextSizeCheck">


    <ImageView
        android:id="@+id/back"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/statistical_back"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/element_back" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/points"
        android:textColor="@color/white"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintStart_toStartOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <TextView
        android:id="@+id/timeOfPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/time_of_play_00_00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintStart_toStartOf="@+id/back" />
</androidx.constraintlayout.widget.ConstraintLayout>