<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_fon_first">

    <Button
        android:id="@+id/run"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_back"
        android:paddingBottom="10dp"
        android:text="@string/run"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/statistical"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_back"
        android:paddingBottom="10dp"
        android:text="@string/points"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/run"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/exit"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_back"
        android:paddingBottom="10dp"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistical"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/ruleNavigate"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/navigate_to_rule_page"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/question"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>